Bug 84138 - Crash on OSX/4.4 master upon selecting Chinese input method
Summary: Crash on OSX/4.4 master upon selecting Chinese input method
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other macOS (All)
: medium normal
Assignee: Matthew Francis
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2014-09-21 15:41 UTC by Matthew Francis
Modified: 2014-09-25 16:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (6.35 KB, text/plain)
2014-09-21 15:42 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2014-09-21 15:41:13 UTC
4.4 master compiled with --enable-dbgutil crashes on OSX when Chinese input is selected. (Oddly, the same doesn't happen with Japanese)

This appears to be a missing SolarMutex acquisition
Comment 1 Matthew Francis 2014-09-21 15:42:40 UTC
Created attachment 106604 [details]
Backtrace
Comment 2 Commit Notification 2014-09-25 16:25:24 UTC
Matthew J. Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7377768b290e728d3df1fc5b7b04ce81ae285ada

fdo#84138 Add missing YIELD_GUARD to fix an input method crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-09-25 16:25:36 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c40a8f6c0466f609e49ad1bd4b9da339552d18dc

Follow-up to fdo#84138: Add YIELD_GUARD here, too, fixes another crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.