fdo#84138 Add missing YIELD_GUARD to fix an input method crash

Change-Id: Iecf69c29a4574105a33ec003970067d4db823423